--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 id="jacob-herbert-practice-website">Jacob Herbert Practice Website</h1>
 
 <h3 id="ernest-shackleton-1874---1922">Ernest Shackleton (1874 - 1922)</h3>
-<p><img src="./Jacob Herbert Practice Website _ jsherbert36.github.io_files/shackletonicon.jpg" alt="Ernest Shackleton at Dulwich College"></p>
+<p><img src="./shackletonicon.jpg" alt="Ernest Shackleton at Dulwich College"></p>
 
 <ul>
   <li>Shackleton’s Life</li>
