--- a/index.html
+++ b/index.html
@@ -28,45 +28,30 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1 id="jacob-herbert-practice-website">Jacob Herbert Practice Website</h1>
-
 <h3 id="ernest-shackleton-1874---1922">Ernest Shackleton (1874 - 1922)</h3>
 <p><img src="./shackletonicon.jpg" alt="Ernest Shackleton at Dulwich College"></p>
-
 <ul>
   <li>Shackleton’s Life</li>
   <li>Dulwich College</li>
   <li>Endurance Expedition</li>
   <li>James Caird</li>
 </ul>
-
 <h4 id="shackletons-life">Shackleton’s Life</h4>
-
-<p><a href="https://en.wikipedia.org/wiki/Ernest_Shackleton" target="_blank"> Sir Ernest Shackleton </a> was an Anglo-Irish Antarctic explorer and is famous, principally, for leading the Imperial Trans-Antartic (Endurance) Expedition of 1914-16.</p>
-
-<p>He was one of the principal figures of the period known as the Heroic Age of Antartic Exploration. Educated at Dulwich College and having ignored his father's wishes that he become a doctor he joined the merchant navy. Of many quotes one of his most famous is, Difficulties are just things to overcome, after all.
-
-</p><p>During his life he made three trips to the Antarctic. As well as climbing Mount Erebus he made many important scientific discoveries. On his fourth expedition to circumnavigate the Antartic he died of a heart attack. He was buried on the Island of South Georgia.</p>
-
-
+<p><a href="https://en.wikipedia.org/wiki/Ernest_Shackleton" target="_blank">Sir Ernest Shackleton</a> was an Anglo-Irish Antarctic explorer and is famous, principally, for leading the Imperial Trans-Antartic (Endurance) Expedition of 1914-16.</p>
+<p>He was one of the principal figures of the period known as the Heroic Age of Antartic Exploration. Educated at Dulwich College and having ignored his father's wishes that he become a doctor he joined the merchant navy. Of many quotes one of his most famous is, Difficulties are just things to overcome, after all.</p>
+<p>During his life he made three trips to the Antarctic. As well as climbing Mount Erebus he made many important scientific discoveries. On his fourth expedition to circumnavigate the Antartic he died of a heart attack. He was buried on the Island of South Georgia.</p>
 <h4>Quiz</h4>
-
 <p>How far (according to Shackleton's wikipedia page) is it from Elephant Island
 to South Georgia in Nautical Miles?</p>  
-
 Thank you for visiting my webpage
-
-
 <p></p>
-
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        
-        <p>Visit 
-<a href="https://pages.github.com/">jacobherbert.com</a> for more information</p>
+      <footer class="inner">        
+        <p>Visit <a href="https://pages.github.com/">jacobherbert.com</a> for more information</p>
       </footer>
     </div>
 
