--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Herbert</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italiana">
     <link rel=" stylesheet " href="style1.css " />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body>
-    <div class="container">
-        <h3 class=" animate-character ">JACOB HERBERT</h3>
+    <h3 class="intro">Jacob Herbert is a student and software engineer based in London
+        <span id="amph">&amp;</span> St Andrews</h3>
+    <p class="meet">Nice to meet you.</p>
+    <div class="footer">
+        <span class="footer-elements links" style="text-align: left;"><a href="https://github.com/jsherbert36" target="_blank" class="link">GitHub</a><span class="link">•</span><a href="" class="link">Instagram</a>
+        <span class="link">•</span><a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a></span>
+        <span class="footer-elements" style="text-align: right;">©2022🤞🏽</span>
     </div>
 </body>
 
