--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 </head>
 
 <body>
-    <h3 class="intro">Jacob Herbert is a student and software engineer based in London
-        <span id="amph">&amp;</span> St Andrews</h3>
+    <h1 class="intro">Jacob is a student and software engineer based in London
+        <span id="amph">&amp;</span> St Andrews</h1>
     <p class="meet">Nice to meet you.</p>
+    <div class="about">
+        <h2>About Me</h2>
+        <p>Born and raised in London, I am an aspiring software engineer who is currently studying computer science at the University of St Andrews</p>
+    </div>
+    <div class="connect">
+        <h2>Connect</h2>
+        <div class="links">
+            <a href="https://github.com/jsherbert36" class="link">GitHub</a> •
+            <a href="https://www.instagram.com/jac0bherbert/" class="link">Instagram</a> •
+            <a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a>
+        </div>
+    </div>
     <div class="footer">
-        <span class="footer-elements links" style="text-align: left;"><a href="https://github.com/jsherbert36" target="_blank" class="link">GitHub</a><span class="link">•</span><a href="" class="link">Instagram</a>
-        <span class="link">•</span><a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a></span>
-        <span class="footer-elements" style="text-align: right;">©2022🤞🏽</span>
+        <span>©Jacob Herbert</span> <span>London 2022🤞🏽</span>
     </div>
 </body>
 
