--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Herbert</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italiana">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
     <link rel=" stylesheet " href="style1.css " />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
@@ -28,7 +29,7 @@
         </div>
     </div>
     <div class="footer">
-        <span>©Jacob Herbert</span> <span>London 2022🤞🏽</span>
+        <span style="float:left">©Jacob Herbert</span> <span style="float:right">London 2022🤞🏽</span>
     </div>
 </body>
 
