Add university link

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 </head>
 
 <body>
-    <h1 class="intro">Jacob is a student and software engineer based in London
-        <span id="amph">&amp;</span> St Andrews</h1>
+    <h1 class="intro"><span>Jacob is a</span>
+        <span>student <span class="amph">&amp;</span></span>
+        <span>software</span>
+        <span>engineer</span>
+        <span>based in</span>
+        <span>London <span class="amph">&amp;</span></span>
+        <span>St Andrews</span></h1>
     <p class="meet">Nice to meet you.</p>
     <div class="about">
         <h2>About Me</h2>
@@ -27,6 +32,11 @@
             <a href="https://www.instagram.com/jac0bherbert/" class="link">Instagram</a> •
             <a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a>
         </div>
+    </div>
+    <div class="university">
+        
+        <button onClick="location.href='https://jsh30.host.cs.st-andrews.ac.uk'" type="button" class="uni-button">University</button>
+
     </div>
     <div class="footer">
         <span style="float:left">©Jacob Herbert</span> <span style="float:right">London 2022🤞🏽</span>
