--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>frontend</title><script defer="defer" src="/js/chunk-vendors.ccaeeb39.js"></script><script defer="defer" src="/js/app.b39c7217.js"></script><link href="/css/chunk-vendors.1dd3ef23.css" rel="stylesheet"><link href="/css/app.e88cc312.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jacob Herbert</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italiana">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
+    <link rel=" stylesheet " href="style1.css " />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+
+<body>
+    <h1 class="intro"><span>Jacob is a</span>
+        <span>student <span class="amph">&amp;</span></span>
+        <span>software</span>
+        <span>engineer</span>
+        <span>based in</span>
+        <span>London <span class="amph">&amp;</span></span>
+        <span>St Andrews</span></h1>
+    <p class="meet">Nice to meet you.</p>
+    <div class="about">
+        <h2>About Me</h2>
+        <p>Born and raised in London, I am an aspiring software engineer who is currently studying computer science at the University of St Andrews</p>
+    </div>
+    <div class="connect">
+        <h2>Connect</h2>
+        <div class="links">
+            <a href="https://github.com/jsherbert36" class="link">GitHub</a> •
+            <a href="https://www.instagram.com/jac0bherbert/" class="link">Instagram</a> •
+            <a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a>
+        </div>
+    </div>
+    <div class="university">
+        
+        <button onClick="location.href='https://jsh30.host.cs.st-andrews.ac.uk'" type="button" class="uni-button">University</button>
+
+    </div>
+    <div class="footer">
+        <span style="float:left">©Jacob Herbert</span> <span style="float:right">London 2022🤞🏽</span>
+    </div>
+</body>
+
+</html>
