--- a/index.html
+++ b/index.html
@@ -7,40 +7,29 @@
     <title>Jacob Herbert</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italiana">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
-    <link rel=" stylesheet " href="style1.css " />
+    <link rel="stylesheet" href="style1.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body>
-    <h1 class="intro"><span>Jacob is a</span>
-        <span>student <span class="amph">&amp;</span></span>
-        <span>software</span>
-        <span>engineer</span>
-        <span>based in</span>
-        <span>London <span class="amph">&amp;</span></span>
-        <span>St Andrews</span></h1>
-    <p class="meet">Nice to meet you.</p>
+    <h1 class="intro">
+        Jacob Herbert
+    </h1>
     <div class="about">
-        <h2>About Me</h2>
-        <p>Born and raised in London, I am an aspiring software engineer who is currently studying computer science at the University of St Andrews</p>
+        I'm a software engineer based in London. I studied computer science at the University of St Andrews, graduating
+        in 2024. I've worked as a developer at several companies, including <a href="https://novacoast.com/">Novacoast</a>, <a href="https://funtech.co.uk/">FunTech</a> and <a href="https://www.palantir.com/uk/">Palantir</a>. You can contact me at
+        hello [at] jacobherbert [dot] uk.
     </div>
     <div class="connect">
-        <h2>Connect</h2>
-        <div class="links">
+        <h2>Socials</h2>
+        <div >
             <a href="https://github.com/jsherbert36" class="link">GitHub</a> •
             <a href="https://www.instagram.com/jac0bherbert/" class="link">Instagram</a> •
             <a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a>
         </div>
     </div>
-    <div class="university">
-        
-        <button onClick="location.href='https://jsh30.host.cs.st-andrews.ac.uk'" type="button" class="uni-button">University</button>
 
-    </div>
-    <div class="footer">
-        <span style="float:left">©Jacob Herbert</span> <span style="float:right">London 2022🤞🏽</span>
-    </div>
 </body>
 
 </html>
