--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     </h1>
     <div class="about">
         I'm a software engineer based in London. I studied computer science at the University of St Andrews, graduating
-        in 2024. I've worked as a developer at several companies, including <a href="https://novacoast.com/">Novacoast</a>, <a href="https://funtech.co.uk/">FunTech</a> and <a href="https://www.palantir.com/uk/">Palantir</a>. You can contact me at
+        in 2024. I've worked as a developer at several companies, including <a
+            href="https://novacoast.com/">Novacoast</a>, <a href="https://funtech.co.uk/">FunTech</a> and <a
+            href="https://www.palantir.com/uk/">Palantir</a>. You can contact me at
         hello [at] jacobherbert [dot] uk.
     </div>
     <div class="connect">
         <h2>Socials</h2>
-        <div >
+        <div>
             <a href="https://github.com/jsherbert36" class="link">GitHub</a> •
             <a href="https://www.instagram.com/jac0bherbert/" class="link">Instagram</a> •
             <a href="https://www.linkedin.com/in/jacob-herbert-2003/" class="link">LinkedIn</a>
