--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' content="Hey, I'm Jacob Herbert and this is my website. Click me to find out more!">
-    <title>Jacob Herbert</title>
+    <meta name=”robots” content="index, follow">
+    <title>Jacob Herbert, London, UK</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italiana">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
     <link rel="stylesheet" href="style1.css" />
